fixed content height causing content overlap

--- a/salary-cloud/src/App.css
+++ b/salary-cloud/src/App.css
@@ -18,5 +18,5 @@ html, body {
   height: 100%;
 }
 .App {
-  height: auto;
+  height: inherit;
 }
