--- a/salary-cloud/src/components/about/about.css
+++ b/salary-cloud/src/components/about/about.css
@@ -9,7 +9,3 @@ img {
 .list {
   font-size: medium;
 }
-
-.main {
-  height: inherit;
-}
